--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
 <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".ToggleActivity"
               android:label="@string/app_name"
+              android:description="@string/app_description"
               android:theme="@style/Theme">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
