--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,11 @@
         </intent-filter>
     </activity>
     <service android:name=".WifiLockService"/>
+    <receiver android:name=".BootReceiver" android:enabled="true"> 
+        <intent-filter> 
+            <action android:name="android.intent.action.BOOT_COMPLETED" />
+        </intent-filter> 
+    </receiver>
 </application>
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 </manifest>
