--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="com.elsdoerfer.wifilock"
       android:versionCode="6"
       android:versionName="1.1.2">
+<uses-sdk android:minSdkVersion="1" />
 <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".ToggleActivity"
               android:label="@string/app_name"
