--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,12 +15,13 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
-    <service android:name=".WifiLockService"/>
-    <receiver android:name=".BootReceiver" android:enabled="true">
+    <service android:name=".WifiLockService" android:enabled="false" />
+    <receiver android:name=".BootReceiver" android:enabled="false">
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED" />
         </intent-filter>
     </receiver>
 </application>
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+<uses-permission android:name="android.permission.WRITE_SETTINGS"></uses-permission>
 </manifest>
