--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.elsdoerfer.wifilock"
-      android:versionCode="6"
-      android:versionName="1.1.2">
+      android:versionName="2.0.0" android:versionCode="7">
 <uses-sdk android:minSdkVersion="1" />
 <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".ToggleActivity"
